apps/blockscout/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockscout-svc
spec:
  selector:
    app: app-blockscout
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 4000
