apps/blockscout/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blockscout
spec:
  ingressClassName: nginx
  rules:
  - host: explorer.local.tokamak.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blockscout-svc
            port:
              number: 80
